Fixed layout issues in IE 11

--- a/_sass/base/_generic.scss
+++ b/_sass/base/_generic.scss
@@ -14,6 +14,7 @@ body {
         @include flexbox;
         @include flex-direction(column);
         section {
+            overflow: hidden;
             &.is-fill {
                 height: 100%;
                 @include flex(1);
