--- a/_sass/grid/_container.scss
+++ b/_sass/grid/_container.scss
@@ -1,10 +1,10 @@
 .container {
-    height: 100%;
     max-width: $container-max-width;
     padding: 2rem 0;
     margin: 0 auto;
     position: relative;
     box-sizing: border-box;
+    overflow: hidden;
     @include flex(1);
     @include flexbox;
     @include flex-direction(row); 
