--- a/_sass/grid/_item.scss
+++ b/_sass/grid/_item.scss
@@ -1,6 +1,6 @@
 .item {
     padding: 0 1rem;
-    @include flex(0, 1, auto);
+    @include flex;
     position: relative;
     box-sizing: border-box;
     overflow: hidden;
@@ -65,6 +65,7 @@
         left: 0;
     }
     img {
+        padding: 0;
         margin: 0;
         box-sizing: border-box;
         &.flex-100 {
@@ -93,10 +94,12 @@
             padding: 0 2rem 2rem 2rem;
         }
         &.is-floated-right {
-            padding-right: 0;
+            width: 50%;
+            padding: 0 0 2rem 2rem;
         }
         &.is-floated-left {
-            padding-left: 0;
+            width: 50%;
+            padding: 0 2rem 2rem 0;
         }
     }
 }
