--- a/_sass/pages/_index.scss
+++ b/_sass/pages/_index.scss
@@ -1,4 +1,5 @@
 #intro {
+    min-height: 60vh;
     height: 60vh;
     padding: 0;
     background-color: $black;
